--- a/app/views/partials/analyse/view.scala.html
+++ b/app/views/partials/analyse/view.scala.html
@@ -11,15 +11,18 @@ width="900"
 [closable]="false"
 [(visible)]="uiStateStore.isTemplateInfoDialogVisible"
 *ngIf="uiStateStore.isTemplateInfoDialogVisible">
-    <flow-entity  [entityInfo]="templateEntityInfo" finaliseLabel="Instantiate Flow"></flow-entity>
+    <flow-entity
+    [entityInfo]="templateEntityInfo"
+    finaliseLabel="Instantiate Flow">
+    </flow-entity>
 </p-dialog>
 
 <p-dialog
-header="Read / Write Schema"
-width="900"
+header="Write Schema"
+width="500"
 [resizable]="true"
-[closable]="true"
+[closable]="false"
 [(visible)]="uiStateStore.isProcessorSchemaDialogVisible"
 *ngIf="uiStateStore.isProcessorSchemaDialogVisible">
-    <processor-schema finaliseLabel="Save"></processor-schema>
+    <processor-schema></processor-schema>
 </p-dialog>
