AL-170 : Implement functionality to add / remove fields in schema panel

--- a/app/views/partials/analyse/view.scala.html
+++ b/app/views/partials/analyse/view.scala.html
@@ -18,7 +18,7 @@ width="900"
 </p-dialog>
 
 <p-dialog
-header="Write Schema"
+header="Output Schema"
 width="500"
 [resizable]="true"
 [closable]="false"
