--- a/app/views/partials/processorschema.scala.html
+++ b/app/views/partials/processorschema.scala.html
@@ -6,7 +6,7 @@
         <button pButton
         type="button"
         (click)="save()"
-        [disabled]="false"
+        [disabled]="!(uiStateStore.isSchemaUpdatable | async)"
         label="Save">
         </button>
         <button pButton
