--- a/app/views/partials/schemapanel.scala.html
+++ b/app/views/partials/schemapanel.scala.html
@@ -2,12 +2,14 @@
 <div class="schema-panel-view">
     <div class="ui-g" >
         <div class="ui-g-4"><h4><span class="label label-default pull-left">namespace.id</span></h4></div>
-        <div class="ui-g-8">{{baseSchema.namespace}}.{{baseSchema.name}}</div>
+        <div class="ui-g-8">{{schemaNamespace}}.{{schemaName}}</div>
     </div>
     <p-tree
     [value]="nodes"
     selectionMode="checkbox"
     [(selection)]="selectedNodes"
-    [propagateSelectionDown]="true">
+    [propagateSelectionDown]="true"
+    (onNodeSelect)="updateNode($event)"
+    (onNodeUnselect)="updateNode($event)">
     </p-tree>
 </div>
