AL-171 : Add initial schema property panel, Add specific fields to flow entity conifguration

--- a/app/views/partials/analyse/view.scala.html
+++ b/app/views/partials/analyse/view.scala.html
@@ -26,3 +26,17 @@ width="500"
 *ngIf="uiStateStore.isProcessorSchemaDialogVisible">
     <processor-schema></processor-schema>
 </p-dialog>
+
+<p-dialog
+header="Processor Properties"
+width="900"
+[resizable]="false"
+[closable]="false"
+[(visible)]="uiStateStore.isProcessorPropertiesDialogVisible"
+*ngIf="uiStateStore.isProcessorPropertiesDialogVisible">
+    <flow-entity
+    [entityInfo]="uiStateStore.getSelectedProcessorPropertiesConf()"
+    finaliseLabel="Update">
+    </flow-entity>
+</p-dialog>
+
