--- a/app/views/partials/mobilise/content.scala.html
+++ b/app/views/partials/mobilise/content.scala.html
@@ -13,9 +13,9 @@
          @*The fixed scrollHeight is also required for the workaround*@
         <div class="padding" [ngClass]="{'flex-panel-70': hasActions(), 'flex-panel': !hasActions()}">
             <p-dataTable   [value]="results" scrollable="true" scrollHeight="600px" >
-                <p-column styleClass="info-column" [style]="{'width':'30px'}">
+                <p-column styleClass="groups-column" [style]="{'width':'30px'}">
                     <ng-template let-result="rowData" pTemplate="body">
-                        <i class="fa fa-info-circle"
+                        <i class="fa fa-groups-circle"
                         aria-hidden="true"
                         pTooltip="id: {{result.id}}"
                         tooltipPosition="top"></i>
