--- a/app/views/partials/processorschema.scala.html
+++ b/app/views/partials/processorschema.scala.html
@@ -1,5 +1,8 @@
 @()
-<schema-panel [processor]="uiStateStore.selectedProcessor | async"></schema-panel>
+<schema-panel
+[processor]="uiStateStore.selectedProcessor | async"
+[selectionMode]="checkbox">
+</schema-panel>
 
 <p-footer>
     <div class="ui-dialog-buttonpane ui-widget-content ui-helper-clearfix">
