--- a/app/views/partials/schemapanel.scala.html
+++ b/app/views/partials/schemapanel.scala.html
@@ -1,9 +1,9 @@
 @()
-<div class="schema-panel-view">
-    <div class="ui-g" >
-        <div class="ui-g-4"><h4><span class="label label-default pull-left">namespace.id</span></h4></div>
-        <div class="ui-g-8">{{schemaNamespace}}.{{schemaName}}</div>
-    </div>
+<div class="dialog-panel">
+    @*<div class="ui-g" >*@
+        @*<div class="ui-g-4"><h4><span class="label label-default pull-left">namespace.id</span></h4></div>*@
+        @*<div class="ui-g-8">{{schemaNamespace}}.{{schemaName}}</div>*@
+    @*</div>*@
     <p-tree
     [value]="nodes"
     [selectionMode]="selectionMode"
