--- a/app/views/partials/analyse/view.scala.html
+++ b/app/views/partials/analyse/view.scala.html
@@ -5,6 +5,7 @@
 </flow-tabs>
 
 <p-dialog
+class="dialog-panel"
 header="Templates"
 width="900"
 [resizable]="false"
@@ -28,6 +29,7 @@ width="500"
 </p-dialog>
 
 <p-dialog
+class="dialog-panel"
 header="Processor Properties"
 width="900"
 [resizable]="false"
