--- a/app/views/partials/processorschema.scala.html
+++ b/app/views/partials/processorschema.scala.html
@@ -1,7 +1,7 @@
 @()
 <schema-panel
 [processor]="uiStateStore.selectedProcessor | async"
-[selectionMode]="checkbox">
+[selectionMode]="'checkbox'">
 </schema-panel>
 
 <p-footer>
