--- a/app/views/partials/schemapropertypanel.scala.html
+++ b/app/views/partials/schemapropertypanel.scala.html
@@ -6,7 +6,7 @@
     </schema-panel>
     <div class="ui-g-6">
         <div class="flex-panel-parent">
-            <div><h4><span class="label label-default pull-left">{{label}}</span></h4></div>
+            <div><p>{{description}}</p></div>
             <p-listbox class="flex-panel"
             [options]="parameters"
             [(ngModel)]="selectedParameter">
