AL-171 : Implement processor property schema parameter panels, Implement basic drag drop

--- a/app/views/partials/schemapropertypanel.scala.html
+++ b/app/views/partials/schemapropertypanel.scala.html
@@ -11,6 +11,16 @@
             <p-listbox class="flex-panel"
             [options]="parameters"
             [(ngModel)]="selectedParameter">
+                <ng-template
+                let-parameter
+                pTemplate="default">
+                    <div
+                    pDraggable="p-schema-params"
+                    (onDragStart)="dragStart($event, parameter.value)"
+                    (onDragEnd)="dragEnd($event)">
+                        {{parameter.label}}
+                    </div>
+                </ng-template>
             </p-listbox>
         </div>
     </div>
