--- a/app/views/partials/schemapanel.scala.html
+++ b/app/views/partials/schemapanel.scala.html
@@ -9,8 +9,14 @@
     (onNodeUnselect)="updateNode($event)">
         // FIXME: For some reason, the tree toggle is displayed
         //        for leaf nodes
-        <ng-template let-node pTemplate="default">
-            {{node.label}} <i class="text-primary">{{nodeType(node)}}</i>
+        <ng-template
+        let-node
+        pTemplate="default">
+            <div
+            pDroppable="p-schema-params"
+            (onDrop)="nodeDrop($event, node)">
+                {{node.label}} <i class="text-primary">{{nodeType(node)}}</i>
+            </div>
         </ng-template>
         <ng-template let-node [pTemplate]="scp._FIELDS_TO_MAP">
             <fields-to-map [processorField]="node.data"></fields-to-map>
