AL-188 / AL-189 : Introduced Flux design pattern (@ngrx/store) and immutability (seamless-immutable) with initial use-cases

--- a/app/views/partials/wsview.scala.html
+++ b/app/views/partials/wsview.scala.html
@@ -51,7 +51,7 @@
                 class="btn btn-secondary"
                 (click)="cbItem.command($event)"
                 [disabled]="!cbItem.enabled"
-                [hidden]="cbItem.hidden">
+                [hidden]="oss.hideContextBarItem(cbItem) | async">
                     <i class="fa {{cbItem.iconClass}}" aria-hidden="true" ></i>
                 </button>
             </div>
