--- a/app/views/partials/analyse/flowtabs.scala.html
+++ b/app/views/partials/analyse/flowtabs.scala.html
@@ -3,23 +3,38 @@
 <div class="fill">
     <p-tabView class="fill" (onChange)="selectActiveTab($event.index)">
         @*Workaround for https://github.com/primefaces/primeng/issues/2000*@
-        <p-tabPanel class="fill" *ngIf="uiStateStore.store.flowTabs.length === 0"
-        header="..."
-        selected="true">
-            Instantiate flow from template or create a new flow
-        </p-tabPanel>
+        @*<p-tabPanel class="fill" *ngIf="(flowTabs | async).length === 0"*@
+        @*header="..."*@
+        @*selected="true">*@
+            @*Instantiate flow from template or create a new flow*@
+        @*</p-tabPanel>*@
 
-        <p-tabPanel class="fill"  *ngFor="let tabz of uiStateStore.flowTabs | async"
+        <p-tabPanel class="fill"  *ngFor="let tabz of flowTabs | async"
         [header]="tabz.title"
         [selected]="tabz.active"
-        [disabled]="tabz.disabled">
+        [disabled]="tabz.disabled"
+        (onChange)="selectTab($event)">
             <div class="flex-panel-parent">
                 <div pTooltip="{{tabz.id}}"
                 tooltipPosition="top"
                 class="pull-left"
-                [ngClass]="{green: tabz.isRunning(), red: tabz.isStopped(), black: tabz.isNotStarted()}">{{tabz.name}}</div>
+                [ngClass]="{green: isRunning(tabz), red: isStopped(tabz), black: isNotStarted(tabz)}">{{tabz.name}}</div>
                 <div class="flex-panel"  flow-graph [showFlowInstance]="tabz.flowInstance">Content</div>
             </div>
         </p-tabPanel>
     </p-tabView>
 </div>
+
+<p-dialog
+class="dialog-panel"
+header="Processor Properties"
+width="900"
+[resizable]="false"
+[closable]="false"
+[(visible)]="uiStateStore.isProcessorPropertiesDialogVisible"
+*ngIf="uiStateStore.isProcessorPropertiesDialogVisible">
+    <flow-entity
+    [entityInfo]="getSelectedProcessorPropertiesConf()"
+    finaliseLabel="Update">
+    </flow-entity>
+</p-dialog>
