Move schema / processor property panels to flux pattern

--- a/app/views/partials/processorschema.scala.html
+++ b/app/views/partials/processorschema.scala.html
@@ -1,6 +1,6 @@
 @()
 <schema-panel
-[processor]="uiStateStore.selectedProcessor | async"
+[processor]="oss.selectedProcessor$() | async"
 [selectionMode]="'checkbox'">
 </schema-panel>
 
