AL-165 : Add api endpoints + context menu items + dialog panels for creating empty flow instance and listing available processor services

--- a/app/views/partials/analyse/view.scala.html
+++ b/app/views/partials/analyse/view.scala.html
@@ -20,6 +20,20 @@ width="900"
 
 <p-dialog
 class="dialog-panel"
+header="Create Flow"
+width="900"
+[resizable]="false"
+[closable]="false"
+[(visible)]="uiStateStore.isFlowCreationDialogVisible"
+*ngIf="uiStateStore.isFlowCreationDialogVisible">
+    <flow-entity
+    [entityInfo]="flowCreation"
+    finaliseLabel="Create">
+    </flow-entity>
+</p-dialog>
+
+<p-dialog
+class="dialog-panel"
 header="Output Schema"
 width="500"
 [resizable]="true"
