--- a/app/views/partials/analyse/flowtabs.scala.html
+++ b/app/views/partials/analyse/flowtabs.scala.html
@@ -38,3 +38,17 @@ width="900"
     finaliseLabel="Update">
     </flow-entity>
 </p-dialog>
+
+<p-dialog
+class="dialog-panel"
+header="Processors"
+width="900"
+[resizable]="false"
+[closable]="false"
+[(visible)]="uiStateStore.isProcessorDetailsDialogVisible"
+*ngIf="uiStateStore.isProcessorDetailsDialogVisible">
+    <flow-entity
+    [entityInfo]="processorInfo"
+    finaliseLabel="Add">
+    </flow-entity>
+</p-dialog>
