--- a/app/views/partials/schemapanel.scala.html
+++ b/app/views/partials/schemapanel.scala.html
@@ -29,4 +29,5 @@
             <span (click)="removeLink(node)"><i class="fa fa-times" aria-hidden="true"></i></span>
         </ng-template>
     </p-tree>
+    No schema set for this Processor
 </div>
