--- a/app/views/partials/analyse/flowtabs.scala.html
+++ b/app/views/partials/analyse/flowtabs.scala.html
@@ -18,7 +18,13 @@
                 <div pTooltip="{{tabz.id}}"
                 tooltipPosition="top"
                 class="pull-left"
-                [ngClass]="{green: isRunning(tabz), red: isStopped(tabz), black: isNotStarted(tabz)}">{{tabz.name}}</div>
+                [ngClass]="{green: isRunning(tabz), red: isStopped(tabz), black: isNotStarted(tabz)}">
+                    {{tabz.name}}
+                        <span class="label label-default"
+                        [hidden]="!uiStateStore.isConnectMode">
+                            Connect Mode
+                        </span>
+                </div>
                 <div class="flex-panel"  flow-graph [showFlowInstance]="tabz.flowInstance">Content</div>
             </div>
         </p-tabPanel>
@@ -59,4 +65,15 @@ width="900"
 *ngIf="uiStateStore.isProcessorInfoDialogVisible">
     <flow-entity finaliseLabel="Ok">
     </flow-entity>
+</p-dialog>
+
+<p-dialog
+class="dialog-panel"
+header="Relationships"
+width="600"
+[resizable]="false"
+[closable]="false"
+[(visible)]="uiStateStore.isRelationshipsInfoDialogVisible || uiStateStore.isRelationshipsSettingsDialogVisible"
+*ngIf="uiStateStore.isRelationshipsInfoDialogVisible || uiStateStore.isRelationshipsSettingsDialogVisible">
+    <relationships></relationships>
 </p-dialog>
