Move add processor button to flow context bar

--- a/app/views/partials/schemapanel.scala.html
+++ b/app/views/partials/schemapanel.scala.html
@@ -20,14 +20,12 @@
         </ng-template>
         <ng-template let-node [pTemplate]="scp._FIELDS_TO_MAP">
             <fields-to-map [processorField]="node.data"></fields-to-map>
-            @*<i class="text-info">{{node.label}}</i>*@
             <span (click)="removeLink(node)"><i class="fa fa-times" aria-hidden="true"></i></span>
         </ng-template>
         <ng-template let-node [pTemplate]="scp._FIELD_ACTIONS">
             <field-actions [processorField]="node.data"></field-actions>
-            @*<i class="text-info">{{node.label}}</i>*@
             <span (click)="removeLink(node)"><i class="fa fa-times" aria-hidden="true"></i></span>
         </ng-template>
     </p-tree>
-    No schema set for this Processor
+    <div [hidden]="nodes.length > 0">No schema set for this Processor</div>
 </div>
