AL-203 : Removed vis.js edit toolbar, Added custom connect mode button to allow for adding edges

--- a/app/views/partials/analyse/flowtabs.scala.html
+++ b/app/views/partials/analyse/flowtabs.scala.html
@@ -21,7 +21,7 @@
                 [ngClass]="{green: isRunning(tabz), red: isStopped(tabz), black: isNotStarted(tabz)}">
                     {{tabz.name}}
                         <span class="label label-default"
-                        [hidden]="!uiStateStore.isConnectMode">
+                        [hidden]="!(oss.connectMode$() | async)">
                             Connect Mode
                         </span>
                 </div>
