--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/vis/dist/vis.min.css")" />
 
     @*<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/primeui/themes/omega/theme.css")" />*@
-    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/primeui/primeui-ng-all.min.css")" />
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/leaflet/dist/leaflet.css")" />
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/primeng/resources/primeng.min.css")" />
 
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/app-theme.css")"/>
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("layout/css/layout-blue.css")"/>
@@ -32,8 +32,6 @@
     <script src="@routes.Assets.versioned("lib/leaflet/dist/leaflet.js")"></script>
     <script src="@routes.Assets.versioned("lib/plotly.js/dist/plotly.min.js")"></script>
 
-    <script src="@routes.Assets.versioned("lib/primeui/primeui-ng-all.min.js")"></script>
-
     <script src="@routes.Assets.versioned("lib/keycloak-js/dist/keycloak.min.js")"></script>
     <script src="@routes.Assets.versioned("lib/keycloak-js/dist/keycloak-authz.js")"></script>
     <script src="@routes.Assets.versioned("javascripts/systemjs.config.js")"></script>
@@ -43,7 +41,11 @@
 </head>
 <body>
     <app>
-        <p style="font-size: 125%;text-align:center;color:green;"><b>loading ....</b></p>
+        <div class="splash-screen">
+            <div class="splash-loader">
+                @*<img src="assets/layout/images/logo-loading.png">*@
+            </div>
+        </div>
     </app>
 
 </body>
