AL-256 : Add property resolution, Fix possible property values drop down problem, Move visibility flags to flux state object

--- a/app/views/partials/analyse/flowtabs.scala.html
+++ b/app/views/partials/analyse/flowtabs.scala.html
@@ -37,8 +37,8 @@ header="Processor Properties"
 width="900"
 [resizable]="false"
 [closable]="false"
-[(visible)]="uiStateStore.isProcessorPropertiesDialogVisible"
-*ngIf="uiStateStore.isProcessorPropertiesDialogVisible">
+[(visible)]="oss.visibility().isProcessorPropertiesDialogVisible"
+*ngIf="oss.visibility().isProcessorPropertiesDialogVisible">
     <flow-entity finaliseLabel="Update">
     </flow-entity>
 </p-dialog>
