--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -108,7 +108,6 @@ html, body {
 
 
 .visualise {
-
   overflow: hidden;
 }
 
@@ -448,4 +447,25 @@ div.ui-datatable-scrollable-body {
 .flow-entity-list .ui-listbox-list {
   width: 400px;
 }
+
+// workaround for https://github.com/primefaces/primeng/issues/487 -- start
+.ui-datatable-scrollable-header-box{
+  margin-right: 15px!important;
+}
+
+.ui-datatable-scrollable-body {
+  overflow-y: scroll !important;
+}
+
+.ui-datatable-scrollable-header {
+  width: 100%;
+}
+// workaround for https://github.com/primefaces/primeng/issues/487 -- end
+
+.data-cell {
+  width: 250px;
+}
+
+
+
 
