--- a/app/views/partials/mobilise/content.scala.html
+++ b/app/views/partials/mobilise/content.scala.html
@@ -1,32 +1,21 @@
 @()
 
-<div class="flex-panel table-container" *ngIf="hasResults()">
-    <div class="flex-row-parent">
-        <div class="flex-panel-30 padding" *ngIf="hasActions()">
-            <p-dataTable  [value]="actions"  scrollHeight="200px" scrollWidth="100%">
-                <p-column field="label" header="action"></p-column>
-            </p-dataTable>
-        </div>
-         @*FIXME: Workaround for bugs,*@
-         @*- https://github.com/primefaces/primeng/issues/487*@
-         @*- https://github.com/primefaces/primeng/issues/2137*@
-         @*The fixed scrollHeight is also required for the workaround*@
-        <div class="padding" [ngClass]="{'flex-panel-70': hasActions(), 'flex-panel': !hasActions()}">
-            <p-dataTable   [value]="results" scrollable="true" scrollHeight="600px" >
-                <p-column styleClass="groups-column" [style]="{'width':'30px'}">
-                    <ng-template let-result="rowData" pTemplate="body">
-                        <i class="fa fa-groups-circle"
-                        aria-hidden="true"
-                        pTooltip="id: {{result.id}}"
-                        tooltipPosition="top"></i>
-                    </ng-template>
-                </p-column>
-                <p-column  *ngFor="let col of columns"
-                [field]="col"
-                [header]="col"></p-column>
-            </p-dataTable>
-        </div>
-    </div>
+<div class="fill" *ngIf="hasResults()">
+    <p-dataTable   [value]="results" scrollable="true"  scrollHeight="100%" scrollWidth="100%">
+        <p-column [style]="{'width':'50px'}">
+            <ng-template let-result="rowData" pTemplate="body">
+                <i class="fa fa-groups-circle"
+                aria-hidden="true"
+                pTooltip="id: {{result.id}}"
+                tooltipPosition="top"></i>
+            </ng-template>
+        </p-column>
+        <p-column  [style]="{'width':'250px'}"
+        *ngFor="let col of columns"
+        [field]="col"
+        [header]="col">
+        </p-column>
+    </p-dataTable>
 </div>
 
 
