--- a/app/views/partials/mobilise/content.scala.html
+++ b/app/views/partials/mobilise/content.scala.html
@@ -1,13 +1,18 @@
 @()
 
 <div class="fill" *ngIf="hasResults()">
-    <p-dataTable   [value]="results" scrollable="true"  scrollHeight="100%" scrollWidth="100%">
+    <p-dataTable
+    [value]="results"
+    scrollable="true"
+    scrollHeight="100%"
+    scrollWidth="100%"
+    [loading]="loading"
+    loadingIcon="fa-spinner">
         <p-column [style]="{'width':'50px'}">
             <ng-template let-result="rowData" pTemplate="body">
-                <i class="fa fa-groups-circle"
-                aria-hidden="true"
+                <i class="material-icons"
                 pTooltip="id: {{result.id}}"
-                tooltipPosition="top"></i>
+                tooltipPosition="right">info</i>
             </ng-template>
         </p-column>
         <p-column  [style]="{'width':'250px'}"
