--- a/app/views/partials/flowentity.scala.html
+++ b/app/views/partials/flowentity.scala.html
@@ -1,17 +1,18 @@
 @()
 
 <div class="flex-row-parent" >
-    <div class="flex-panel-30" *ngIf="!hasSingleEntity()">
+    <div class="flex-panel-30 padding" *ngIf="!hasSingleEntity()">
         <p-listbox
         [options]="entities"
         [(ngModel)]="selectedEntityValue"
         (onChange)="select($event.value.id)"
         filter="filter"
         class="flow-entity-list"
+        [style]="{'width': '100%'}"
         [listStyle]="{'max-height': '400px'}">
         </p-listbox>
     </div>
-    <div [ngClass]="{'flex-panel-70': !hasSingleEntity(), 'flex-panel': hasSingleEntity()}">
+    <div class="padding" [ngClass]="{'flex-panel-70': !hasSingleEntity(), 'flex-panel': hasSingleEntity()}">
         <div class="entity-tab-view" *ngIf="selectedFlowEntityConf | async as flowEntity">
             <p-tabView *ngIf="flowEntity.isSelected()">
                 <p-tabPanel
